--- a/requirements.yml
+++ b/requirements.yml
@@ -1,8 +1,2 @@
-# Install perfsonar roles
-- src: https://github.com/perfsonar/ansible-role-perfsonar-archive
-- src: https://github.com/perfsonar/ansible-role-perfsonar-installer
-- src: https://github.com/perfsonar/ansible-role-perfsonar-maddash
-- src: https://github.com/perfsonar/ansible-role-perfsonar-testpoint
-- src: https://github.com/perfsonar/ansible-role-perfsonar-toolkit
-- src: https://github.com/perfsonar/ansible-role-perfsonar-psconfig-publisher
-- src: https://github.com/perfsonar/ansible-role-perfsonar-psconfig-web-admin
+# Install required roles
+- src: https://github.com/UMNET-perfSONAR/ansible-role-template.git
